--- a/story-book/package.json
+++ b/story-book/package.json
@@ -10,18 +10,20 @@
     "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.20",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@storybook/addon-a11y": "^6.4.12",
     "@storybook/addon-actions": "^6.4.12",
+    "@storybook/addon-docs": "^6.4.12",
     "@storybook/addon-essentials": "^6.4.12",
+    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.4.12",
     "@storybook/react": "^6.4.12",
     "@types/node": "17.0.8",
